<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <EditText
            android:id="@+id/diary_name"
            android:hint="@string/diary_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/diary_description"
            android:hint="@string/diary_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:maxLines="4"
            android:gravity="top"
            android:padding="4dp"
            android:background="@drawable/ed_box"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp">
            <Button
                android:id="@+id/action_cancel"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:textColor="@android:color/white"
                android:background="@drawable/cancel_btn"/>

            <Button
                android:id="@+id/action_save"
                android:text="@string/save"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_toEndOf="@id/action_cancel"
                android:background="@drawable/save_btn"/>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>