<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="8dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <RadioGroup
            android:id="@+id/sorting_actio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/sort_by_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_date"/>

            <RadioButton
                android:id="@+id/sort_by_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_order"/>

            <RadioButton
                android:id="@+id/sort_by_order_z_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_order_z_a"/>
        </RadioGroup>
    </LinearLayout>

</androidx.cardview.widget.CardView>